// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rmrk2.0.0 Consolidator: BUY Should allow BUYing NFT after transferable block reached with positive transfer value 1`] = `
{
  "bases": {},
  "collections": {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": [],
      "count": 1,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
  },
  "invalid": [],
  "nfts": {
    "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777": {
      "block": 3,
      "burned": "",
      "changes": [
        {
          "block": 4,
          "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "field": "forsale",
          "new": 1000000000000n,
          "old": 0n,
          "opType": "LIST",
        },
        {
          "block": 5,
          "caller": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "field": "owner",
          "new": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "old": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "opType": "BUY",
        },
        {
          "block": 5,
          "caller": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "field": "rootowner",
          "new": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "old": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "opType": "BUY",
        },
        {
          "block": 5,
          "caller": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "field": "forsale",
          "new": 0n,
          "old": 1000000000000n,
          "opType": "BUY",
        },
      ],
      "children": [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "metadata": undefined,
      "owner": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "pending": false,
      "priority": [],
      "properties": {},
      "reactions": {},
      "resources": [],
      "rootowner": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "sn": "00000777",
      "symbol": "KANR",
      "transferable": 3,
    },
  },
}
`;

exports[`rmrk2.0.0 Consolidator: BUY Should allow BUYing NFT if transferable block not passed with negative transfer value 1`] = `
{
  "bases": {},
  "collections": {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": [],
      "count": 1,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
  },
  "invalid": [],
  "nfts": {
    "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777": {
      "block": 3,
      "burned": "",
      "changes": [
        {
          "block": 4,
          "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "field": "forsale",
          "new": 1000000000000n,
          "old": 0n,
          "opType": "LIST",
        },
        {
          "block": 5,
          "caller": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "field": "owner",
          "new": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "old": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "opType": "BUY",
        },
        {
          "block": 5,
          "caller": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "field": "rootowner",
          "new": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "old": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "opType": "BUY",
        },
        {
          "block": 5,
          "caller": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "field": "forsale",
          "new": 0n,
          "old": 1000000000000n,
          "opType": "BUY",
        },
      ],
      "children": [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "metadata": undefined,
      "owner": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "pending": false,
      "priority": [],
      "properties": {},
      "reactions": {},
      "resources": [],
      "rootowner": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "sn": "00000777",
      "symbol": "KANR",
      "transferable": -4,
    },
  },
}
`;

exports[`rmrk2.0.0 Consolidator: BUY Should allow you to BUY listed NFT for someone else 1`] = `
{
  "bases": {},
  "collections": {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": [],
      "count": 1,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
  },
  "invalid": [],
  "nfts": {
    "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777": {
      "block": 3,
      "burned": "",
      "changes": [
        {
          "block": 4,
          "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "field": "forsale",
          "new": 1000000000000n,
          "old": 0n,
          "opType": "LIST",
        },
        {
          "block": 5,
          "caller": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "field": "owner",
          "new": "5Cafn1kueAGQnrcvN2uHFQ5NaMznSMyrfeUzuDHDQsMRSsN6",
          "old": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "opType": "BUY",
        },
        {
          "block": 5,
          "caller": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "field": "rootowner",
          "new": "5Cafn1kueAGQnrcvN2uHFQ5NaMznSMyrfeUzuDHDQsMRSsN6",
          "old": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "opType": "BUY",
        },
        {
          "block": 5,
          "caller": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "field": "forsale",
          "new": 0n,
          "old": 1000000000000n,
          "opType": "BUY",
        },
      ],
      "children": [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "metadata": undefined,
      "owner": "5Cafn1kueAGQnrcvN2uHFQ5NaMznSMyrfeUzuDHDQsMRSsN6",
      "pending": false,
      "priority": [],
      "properties": {},
      "reactions": {},
      "resources": [],
      "rootowner": "5Cafn1kueAGQnrcvN2uHFQ5NaMznSMyrfeUzuDHDQsMRSsN6",
      "sn": "00000777",
      "symbol": "KANR",
      "transferable": 1,
    },
  },
}
`;

exports[`rmrk2.0.0 Consolidator: BUY Should allow you to BUY listed NFT for yourself 1`] = `
{
  "bases": {},
  "collections": {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": [],
      "count": 1,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
  },
  "invalid": [],
  "nfts": {
    "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777": {
      "block": 3,
      "burned": "",
      "changes": [
        {
          "block": 4,
          "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "field": "forsale",
          "new": 1000000000000n,
          "old": 0n,
          "opType": "LIST",
        },
        {
          "block": 5,
          "caller": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "field": "owner",
          "new": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "old": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "opType": "BUY",
        },
        {
          "block": 5,
          "caller": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "field": "rootowner",
          "new": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "old": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "opType": "BUY",
        },
        {
          "block": 5,
          "caller": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "field": "forsale",
          "new": 0n,
          "old": 1000000000000n,
          "opType": "BUY",
        },
      ],
      "children": [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "metadata": undefined,
      "owner": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "pending": false,
      "priority": [],
      "properties": {},
      "reactions": {},
      "resources": [],
      "rootowner": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "sn": "00000777",
      "symbol": "KANR",
      "transferable": 1,
    },
  },
}
`;

exports[`rmrk2.0.0 Consolidator: BUY Should correctly change rootowner of all child NFTs 1`] = `
{
  "bases": {},
  "collections": {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": [],
      "count": 3,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
  },
  "invalid": [],
  "nfts": {
    "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777": {
      "block": 3,
      "burned": "",
      "changes": [
        {
          "block": 6,
          "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "field": "forsale",
          "new": 1000000000000n,
          "old": 0n,
          "opType": "LIST",
        },
        {
          "block": 7,
          "caller": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "field": "owner",
          "new": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "old": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "opType": "BUY",
        },
        {
          "block": 7,
          "caller": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "field": "rootowner",
          "new": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "old": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "opType": "BUY",
        },
        {
          "block": 7,
          "caller": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "field": "forsale",
          "new": 0n,
          "old": 1000000000000n,
          "opType": "BUY",
        },
      ],
      "children": [
        {
          "equipped": "",
          "id": "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
          "pending": false,
        },
      ],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "metadata": undefined,
      "owner": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "pending": false,
      "priority": [],
      "properties": {},
      "reactions": {},
      "resources": [],
      "rootowner": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "sn": "00000777",
      "symbol": "KANR",
      "transferable": 1,
    },
    "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000888": {
      "block": 4,
      "burned": "",
      "changes": [],
      "children": [
        {
          "equipped": "",
          "id": "5-d43593c715a56da27d-KANARIABIRDS-KANR-00000999",
          "pending": false,
        },
      ],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
      "metadata": undefined,
      "owner": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "pending": false,
      "priority": [],
      "properties": {},
      "reactions": {},
      "resources": [],
      "rootowner": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "sn": "00000888",
      "symbol": "KANR",
      "transferable": 1,
    },
    "5-d43593c715a56da27d-KANARIABIRDS-KANR-00000999": {
      "block": 5,
      "burned": "",
      "changes": [],
      "children": [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "5-d43593c715a56da27d-KANARIABIRDS-KANR-00000999",
      "metadata": undefined,
      "owner": "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
      "pending": false,
      "priority": [],
      "properties": {},
      "reactions": {},
      "resources": [],
      "rootowner": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "sn": "00000999",
      "symbol": "KANR",
      "transferable": 1,
    },
  },
}
`;

exports[`rmrk2.0.0 Consolidator: BUY Should correctly change rootowner when child NFT is sold 1`] = `
{
  "bases": {},
  "collections": {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": [],
      "count": 3,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
  },
  "invalid": [],
  "nfts": {
    "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777": {
      "block": 3,
      "burned": "",
      "changes": [],
      "children": [
        {
          "equipped": "",
          "id": "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
          "pending": false,
        },
      ],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "metadata": undefined,
      "owner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "pending": false,
      "priority": [],
      "properties": {},
      "reactions": {},
      "resources": [],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000777",
      "symbol": "KANR",
      "transferable": 1,
    },
    "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000888": {
      "block": 4,
      "burned": "",
      "changes": [],
      "children": [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
      "metadata": undefined,
      "owner": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "pending": false,
      "priority": [],
      "properties": {},
      "reactions": {},
      "resources": [],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000888",
      "symbol": "KANR",
      "transferable": 1,
    },
    "5-d43593c715a56da27d-KANARIABIRDS-KANR-00000999": {
      "block": 5,
      "burned": "",
      "changes": [
        {
          "block": 6,
          "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "field": "forsale",
          "new": 1000000000000n,
          "old": 0n,
          "opType": "LIST",
        },
        {
          "block": 7,
          "caller": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "field": "owner",
          "new": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "old": "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
          "opType": "BUY",
        },
        {
          "block": 7,
          "caller": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "field": "rootowner",
          "new": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "old": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "opType": "BUY",
        },
        {
          "block": 7,
          "caller": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "field": "forsale",
          "new": 0n,
          "old": 1000000000000n,
          "opType": "BUY",
        },
      ],
      "children": [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "5-d43593c715a56da27d-KANARIABIRDS-KANR-00000999",
      "metadata": undefined,
      "owner": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "pending": false,
      "priority": [],
      "properties": {},
      "reactions": {},
      "resources": [],
      "rootowner": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "sn": "00000999",
      "symbol": "KANR",
      "transferable": 1,
    },
  },
}
`;

exports[`rmrk2.0.0 Consolidator: BUY Should correctly save changes when commission is paid 1`] = `
{
  "bases": {},
  "collections": {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": [],
      "count": 3,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
  },
  "invalid": [],
  "nfts": {
    "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777": {
      "block": 3,
      "burned": "",
      "changes": [],
      "children": [
        {
          "equipped": "",
          "id": "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
          "pending": false,
        },
      ],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "metadata": undefined,
      "owner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "pending": false,
      "priority": [],
      "properties": {},
      "reactions": {},
      "resources": [],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000777",
      "symbol": "KANR",
      "transferable": 1,
    },
    "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000888": {
      "block": 4,
      "burned": "",
      "changes": [],
      "children": [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
      "metadata": undefined,
      "owner": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "pending": false,
      "priority": [],
      "properties": {},
      "reactions": {},
      "resources": [],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000888",
      "symbol": "KANR",
      "transferable": 1,
    },
    "5-d43593c715a56da27d-KANARIABIRDS-KANR-00000999": {
      "block": 5,
      "burned": "",
      "changes": [
        {
          "block": 6,
          "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "field": "forsale",
          "new": 1000000000000n,
          "old": 0n,
          "opType": "LIST",
        },
        {
          "block": 7,
          "caller": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "field": "owner",
          "new": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "old": "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
          "opType": "BUY",
        },
        {
          "block": 7,
          "caller": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "field": "rootowner",
          "new": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "old": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "opType": "BUY",
        },
        {
          "block": 7,
          "caller": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
          "extraTransfers": [
            {
              "amount": "100000000000",
              "receiver": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
            },
          ],
          "field": "forsale",
          "new": 0n,
          "old": 1000000000000n,
          "opType": "BUY",
        },
      ],
      "children": [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "5-d43593c715a56da27d-KANARIABIRDS-KANR-00000999",
      "metadata": undefined,
      "owner": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "pending": false,
      "priority": [],
      "properties": {},
      "reactions": {},
      "resources": [],
      "rootowner": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "sn": "00000999",
      "symbol": "KANR",
      "transferable": 1,
    },
  },
}
`;

exports[`rmrk2.0.0 Consolidator: BUY Should prevent you from BUYing NFT with incorrect balance transfer 1`] = `
{
  "bases": {},
  "collections": {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": [],
      "count": 1,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
  },
  "invalid": [
    {
      "block": 5,
      "caller": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "message": "[BUY] Transfer for the purchase of NFT ID 3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777 not valid. Recipient, amount should be HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F,1000000000000, is HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F,2000000000000.",
      "object_id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "op_type": "BUY",
    },
  ],
  "nfts": {
    "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777": {
      "block": 3,
      "burned": "",
      "changes": [
        {
          "block": 4,
          "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "field": "forsale",
          "new": 1000000000000n,
          "old": 0n,
          "opType": "LIST",
        },
      ],
      "children": [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 1000000000000n,
      "id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "metadata": undefined,
      "owner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "pending": false,
      "priority": [],
      "properties": {},
      "reactions": {},
      "resources": [],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000777",
      "symbol": "KANR",
      "transferable": 1,
    },
  },
}
`;

exports[`rmrk2.0.0 Consolidator: BUY Should prevent you from BUYing NFT without a balance transfer 1`] = `
{
  "bases": {},
  "collections": {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": [],
      "count": 1,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
  },
  "invalid": [
    {
      "block": 5,
      "caller": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "message": "[BUY] Transfer for the purchase of NFT ID 3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777 not valid. Recipient, amount should be HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F,1000000000000, is .",
      "object_id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "op_type": "BUY",
    },
  ],
  "nfts": {
    "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777": {
      "block": 3,
      "burned": "",
      "changes": [
        {
          "block": 4,
          "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "field": "forsale",
          "new": 1000000000000n,
          "old": 0n,
          "opType": "LIST",
        },
      ],
      "children": [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 1000000000000n,
      "id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "metadata": undefined,
      "owner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "pending": false,
      "priority": [],
      "properties": {},
      "reactions": {},
      "resources": [],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000777",
      "symbol": "KANR",
      "transferable": 1,
    },
  },
}
`;

exports[`rmrk2.0.0 Consolidator: BUY Should prevent you from BUYing burned NFT 1`] = `
{
  "bases": {},
  "collections": {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": [],
      "count": 0,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
  },
  "invalid": [
    {
      "block": 6,
      "caller": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "message": "[BUY] Attempting to buy burned NFT 3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "object_id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "op_type": "BUY",
    },
  ],
  "nfts": {
    "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777": {
      "block": 3,
      "burned": "true",
      "changes": [
        {
          "block": 4,
          "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "field": "forsale",
          "new": 1000000000000n,
          "old": 0n,
          "opType": "LIST",
        },
        {
          "block": 5,
          "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "field": "burned",
          "new": "true",
          "old": "",
          "opType": "BURN",
        },
        {
          "block": 5,
          "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "field": "forsale",
          "new": 0n,
          "old": 1000000000000n,
          "opType": "BURN",
        },
      ],
      "children": [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "equipped": "",
      "forsale": 0n,
      "id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "metadata": undefined,
      "owner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "pending": false,
      "priority": [],
      "properties": {},
      "reactions": {},
      "resources": [],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000777",
      "symbol": "KANR",
      "transferable": 1,
    },
  },
}
`;

exports[`rmrk2.0.0 Consolidator: BUY Should prevent you from BUYing child NFT with incorrect balance transfer 1`] = `
{
  "bases": {},
  "collections": {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": [],
      "count": 2,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
  },
  "invalid": [
    {
      "block": 6,
      "caller": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "message": "[BUY] Attempting to buy not-for-sale NFT 3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "object_id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "op_type": "BUY",
    },
  ],
  "nfts": {
    "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777": {
      "block": 3,
      "burned": "",
      "changes": [],
      "children": [
        {
          "equipped": "",
          "id": "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
          "pending": false,
        },
      ],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "metadata": undefined,
      "owner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "pending": false,
      "priority": [],
      "properties": {},
      "reactions": {},
      "resources": [],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000777",
      "symbol": "KANR",
      "transferable": 1,
    },
    "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000888": {
      "block": 4,
      "burned": "",
      "changes": [
        {
          "block": 5,
          "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "field": "forsale",
          "new": 1000000000000n,
          "old": 0n,
          "opType": "LIST",
        },
      ],
      "children": [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 1000000000000n,
      "id": "4-d43593c715a56da27d-KANARIABIRDS-KANR-00000888",
      "metadata": undefined,
      "owner": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "pending": false,
      "priority": [],
      "properties": {},
      "reactions": {},
      "resources": [],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000888",
      "symbol": "KANR",
      "transferable": 1,
    },
  },
}
`;

exports[`rmrk2.0.0 Consolidator: BUY Should prevent you from BUYing non existent NFT 1`] = `
{
  "bases": {},
  "collections": {},
  "invalid": [
    {
      "block": 2,
      "caller": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "message": "[BUY] Attempting to buy non-existant NFT 3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "object_id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "op_type": "BUY",
    },
  ],
  "nfts": {},
}
`;

exports[`rmrk2.0.0 Consolidator: BUY Should prevent you from BUYing unlisted NFT 1`] = `
{
  "bases": {},
  "collections": {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": [],
      "count": 1,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
  },
  "invalid": [
    {
      "block": 4,
      "caller": "FoQJpPyadYccjavVdTWxpxU7rUEaYhfLCPwXgkfD6Zat9QP",
      "message": "[BUY] Attempting to buy not-for-sale NFT 3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "object_id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "op_type": "BUY",
    },
  ],
  "nfts": {
    "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777": {
      "block": 3,
      "burned": "",
      "changes": [],
      "children": [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "metadata": undefined,
      "owner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "pending": false,
      "priority": [],
      "properties": {},
      "reactions": {},
      "resources": [],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000777",
      "symbol": "KANR",
      "transferable": 1,
    },
  },
}
`;
